--- a/Xadrez-console/Xadrez-console.csproj
+++ b/Xadrez-console/Xadrez-console.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Xadrez_console</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Board\" />
+  </ItemGroup>
+
 </Project>
